--- a/release/pom.xml
+++ b/release/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>poc-multimodule</artifactId>
-        <groupId>za.co.absa.multimodule</groupId>
+        <groupId>org.github.kevinwallimann.multimodule</groupId>
         <version>0.1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -19,12 +19,12 @@
 
     <dependencies>
         <dependency>
-            <groupId>za.co.absa.multimodule</groupId>
+            <groupId>org.github.kevinwallimann.multimodule</groupId>
             <artifactId>aws-connector</artifactId>
             <version>0.1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>za.co.absa.multimodule</groupId>
+            <groupId>org.github.kevinwallimann.multimodule</groupId>
             <artifactId>mongodb-connector</artifactId>
             <version>0.1.0-SNAPSHOT</version>
         </dependency>
